src/test/deca/syntax/valid/custom/println/inst_int_println_nothing.deca
// Description:
//   Print without arguments.
// Results:
//
//
// History:
//    created on 12/01/2022

{
   int i = 1;
   println();
}
